# cmake_tutorials

application/: CMakeLists.txt  main.cpp
application/include/: Sum.hpp  dconfiguration.h.ini
application/lib/: CMakeLists.txt
application/lib/include/: Component.hpp
application/lib/src/: Component.cpp
application/src/: Sum.cpp
